osd: Always build peer_missing (including strays) for _update_calc_stats()

Fixes: http://tracker.ceph.com/issues/22837

Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 0e9d64387547f4586194f1a41f21ff07462d8d34)